--- a/src/client.conf
+++ b/src/client.conf
@@ -10,6 +10,13 @@ Server_2.hostname = localhost
 Server_2.id = 2
 Server_2.rmiregistry = 5002
 
+Server_3.hostname = localhost
+Server_3.id = 3
+Server_3.rmiregistry = 5003
+
+Server_4.hostname = localhost
+Server_4.id = 4
+Server_4.rmiregistry = 5004
 ; Server_1.hostname = csel-kh4250-09.cselabs.umn.edu
 ; Server_1.id = 1
 ; Server_1.rmiregistry = 5001
